# classicube-livesplit-plugin

./: Cargo.toml  flake.nix
.github/: semantic-release.json
.github/workflows/: build.yml  release.yml
examples/: chat_codec_roundtrip.rs
src/: chat.rs  chat_codec.rs  lib.rs
src/plugin/: async_manager.rs  command.rs  logger.rs  mod.rs  module.rs  pause_triggers.rs
src/plugin/editor/: hook.rs  mod.rs  permissions.rs  preview.rs
src/plugin/hud/: boxes.rs  mod.rs  render.rs  shared.rs
src/plugin/hud/labels/: context.rs  mod.rs  render.rs  tests.rs  texture.rs
src/plugin/hud/lines/: mod.rs  tests.rs
src/plugin/hud/shared/: tests.rs
src/plugin/livesplit/: client.rs  mod.rs  protocol.rs  server.rs
src/plugin/lss_storage/: mod.rs  path.rs  payload.rs  read.rs  write.rs
src/plugin/lss_storage/path/: tests.rs
src/plugin/lss_storage/payload/: tests.rs
src/plugin/lss_storage/read/: tests.rs
src/plugin/lss_storage/write/: tests.rs
src/plugin/map/: mod.rs
src/plugin/pause_triggers/: tests.rs
src/plugin/splits/: fixture.rs  geometry.rs  mod.rs
src/plugin/splits/fixture/: tests.rs
src/plugin/splits/geometry/: tests.rs
src/plugin/timer/: context.rs  format.rs  mod.rs  render.rs  state.rs  texture.rs
src/plugin/timer/format/: tests.rs
src/plugin/timer/state/: tests.rs
src/plugin/track_source/: decode.rs  encode.rs  mod.rs
src/plugin/track_source/decode/: tests.rs
src/plugin/track_source/encode/: tests.rs
