[package]
name = "classicube-livesplit-plugin"
version = "0.6.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "=1.0.102", features = ["backtrace"] }
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=6.0.4"
futures-util = { version = "=0.3.32", default-features = false }
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core.git", rev = "fc9a1c92fb5099793ebf250d241361f5f83a9ac1" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "=0.29.0"
tokio-util = { version = "=0.7.18", features = ["rt"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
